# Chopper

./: .gitignore  .gitmodules  CMakeLists.txt
include/chopper/: detail_parse_chopper_pack_line.hpp  print_peak_memory_usage.hpp
include/chopper/count/: chopper_count.hpp  count_config.hpp  count_kmers.hpp
include/chopper/pack/: aggregate_by.hpp  chopper_pack.hpp  hierarchical_binning.hpp  pack_config.hpp
include/chopper/split/: progressive_alignment.hpp  transform_graphs.hpp  traverse_graph.hpp
include/chopper/union/: atomic_flag.hpp  clustering_node.hpp  distance_matrix.hpp  estimate_unions_hll.hpp  hyperloglog.hpp  parallel_distance_matrix.hpp  print_peak_memory_usage.hpp  union_estimate.hpp  user_bin_sequence.hpp
src/: CMakeLists.txt  chopper_count.cpp  chopper_pack.cpp  count_GC_content.cpp  count_HIBF_kmers_based_on_binning.cpp  count_kmers_per_bin.cpp  measure_hyperloglog.cpp
test/: CMakeLists.txt
test/api/count/: chopper_count_test.cpp  count_kmers_test.cpp
test/api/union/: CMakeLists.txt  hyperloglog_test.cpp
test/cli/: cli_chopper_pipeline_test.cpp  cli_chopper_pipelline_test.cpp  cli_count_HIBF_kmers_based_on_binning_test.cpp
